--- a/Dicee+Challenge+-+Starting+Files/dicee.html
+++ b/Dicee+Challenge+-+Starting+Files/dicee.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="index.js" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
@@ -30,7 +29,7 @@
         />
       </div>
     </div>
-
+    <script src="index.js" charset="utf-8"></script>
     <footer>www 🎲 App Brewery 🎲 com</footer>
   </body>
 </html>
