--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -24,6 +24,6 @@
 
     <script src="index.js" charset="utf-8"></script>
 
-    <footer>Made with ❤️ in London.</footer>
+    <footer>Made with ❤️ in Louisiana.</footer>
   </body>
 </html>
